    are applied to a dynamic attribute, instead
    of failure / silent failure.  [ticket:1864]

  - Fixed bug whereby generating a Query derived
    from one which had the same column repeated
    with different label names, typically 
    in some UNION situations, would fail to 
    propagate the inner columns completely to
    the outer query.  [ticket:1852]
    
- sql
  - Changed the scheme used to generate truncated
    "auto" index names when using the "index=True"
    flag on Column.   The truncation only takes
    place with the auto-generated name, not one
    that is user-defined (an error would be 
    raised instead), and the truncation scheme 
    itself is now based on a fragment of an md5
    hash of the identifier name, so that multiple
    indexes on columns with similar names still
    have unique names.  [ticket:1855]

  - The generated index name also is based on 
    a "max index name length" attribute which is
    separate from the "max identifier length" - 
    this to appease MySQL who has a max length
    of 64 for index names, separate from their
    overall max length of 255.  [ticket:1412]

  - Calling fetchone() or similar on a result that
    has already been exhausted, has been closed,
    or is not a result-returning result now 
    raises ResourceClosedError, a subclass of
    InvalidRequestError, in all cases, regardless
    of backend.  Previously, some DBAPIs would
    raise ProgrammingError (i.e. pysqlite), others
    would return None leading to downstream breakages
    (i.e. MySQL-python).

  - Connection, ResultProxy, as well as Session use
    ResourceClosedError for all "this
    connection/transaction/result is closed" types of
    errors.

  - the text() construct, if placed in a column
    oriented situation, will at least return NULLTYPE
    for its type instead of None, allowing it to 
    be used a little more freely for ad-hoc column
    expressions than before.   literal_column()